--- a/index.html
+++ b/index.html
@@ -567,7 +567,7 @@
                     </div>
                 </li>
                 <li class="vegitable">
-                    <img src="img/st3.jpg" alt="">
+                    <img src="img/con4.jpg" alt="">
                     <div class="msg">
                         <h2 class="name">[벨지오이오소]부라타 치즈</h2>
                         <p class="price">8,200원<span class="original">9,500원</span></p>
@@ -666,7 +666,7 @@
                     </div>
                     <div class="swiper-slide">
                         <a href="#">
-                        <div class="pic"><img src="img/today_1.png" alt="con1"></div>
+                        <div class="pic"><img src="img/today_2.png" alt="con1"></div>
                         <div class="msg">
                             <h2 class="name">[벨지오이오소]부라타 치즈</h2>
                             <p class="price">8,200원<span class="original">9,500원</span> </p>
@@ -675,7 +675,7 @@
                     </div>
                     <div class="swiper-slide">
                         <a href="#">
-                        <div class="pic"><img src="img/today_1.png" alt="con1"></div>
+                        <div class="pic"><img src="img/today_3.png" alt="con1"></div>
                         <div class="msg">
                             <h2 class="name">[벨지오이오소]부라타 치즈</h2>
                             <p class="price">8,200원<span class="original">9,500원</span> </p>
@@ -684,7 +684,7 @@
                         </div>
                     <div class="swiper-slide">
                         <a href="#">
-                        <div class="pic"><img src="img/today_1.png" alt="con1"></div>
+                        <div class="pic"><img src="img/today_4.png" alt="con1"></div>
                         <div class="msg">
                             <h2 class="name">[벨지오이오소]부라타 치즈</h2>
                             <p class="price">8,200원<span class="original">9,500원</span> </p>
